--- a/example/style.css
+++ b/example/style.css
@@ -45,6 +45,38 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 
 
 
+.fixed,
+.background {
+  position: fixed !important;
+  top: 0;
+  opacity: 0.4;
+  width: 100%;
+  height: 200%;
+}
+
+.background-1 {
+  position: absolute;
+  background-image: url(bubbles.png);
+  top:0;
+  width: 100%;
+  height: 100%;
+}
+
+.background-2 {
+  position: absolute;
+  background-image: url(bubbles2.png);
+  top:0;
+  width: 100%;
+  height: 100%;
+}
+.background-3 {
+  position: absolute;
+  background-image: url(bubbles3.png);
+  top:0;
+  width: 100%;
+  height: 100%;
+}
+
 .page {
   /*position: relative;*/
   height: 100%;
