--- a/example/style.css
+++ b/example/style.css
@@ -1,38 +1,28 @@
 html {
-
+  font-family: sans-serif;
   -webkit-tap-highlight-color: transparent;
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-
-  font-family: sans-serif;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   font-size: 26px;
-  margin : 0;
+  margin: 0;
   height: 100%;
-
-
-  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
-
   text-rendering: optimizeSpeed;
-
-  overflow-y: scroll;
-
-  /*color: #ffffff;*/
   color: #222;
 }
 
-
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   -webkit-box-sizing: inherit;
-     -moz-box-sizing: inherit;
-          box-sizing: inherit; }
-
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
 
 body {
   position: relative;
@@ -40,10 +30,20 @@ body {
   height: 100%;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
-  display: block; }
-
-
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block;
+}
 
 .fixed,
 .background {
@@ -51,13 +51,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
   top: 0;
   opacity: 0.4;
   width: 100%;
-  height: 200%;
+  z-index: -1;
+  height: 100%;
 }
 
 .background-1 {
   position: absolute;
   background-image: url(bubbles.png);
-  top:0;
+  top: 0;
   width: 100%;
   height: 100%;
 }
@@ -65,14 +66,15 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 .background-2 {
   position: absolute;
   background-image: url(bubbles2.png);
-  top:0;
+  top: 0;
   width: 100%;
   height: 100%;
 }
+
 .background-3 {
   position: absolute;
   background-image: url(bubbles3.png);
-  top:0;
+  top: 0;
   width: 100%;
   height: 100%;
 }
@@ -82,16 +84,15 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
   height: 100%;
   min-height: 100%;
   /*padding-bottom: 3em;*/
- }
+}
 
 .header {
   height: 100%;
   background-color: #222;
+  opacity: 0.95;
   color: white;
   /*padding-top: 30%;*/
-
   padding: 4%;
-
 }
 
 .header {
@@ -110,24 +111,31 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 
 .parallux-container {
   position: relative;
-
   -webkit-perspective: 500px;
-     -moz-perspective: 500px;
-          perspective: 500px;
-
+  -moz-perspective: 500px;
+  perspective: 500px;
 }
 
 .parallux-item {
   -webkit-backface-visibility: hidden;
-     -moz-backface-visibility: hidden;
-          backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: preserve-3d;
+  -moz-perspective: preserve-3d;
   perspective: preserve-3d;
-
 }
 
+/*.parallux-item > * {
+  -webkit-transform: translateZ(1px);
+     -moz-transform: translateZ(1px);
+      -ms-transform: translateZ(1px);
+       -o-transform: translateZ(1px);
+          transform: translateZ(1px);
+}*/
+
 .overflow-hidden {
-  /*height: 600px;*/
-  overflow: hidden;
+  /*height: 600px;
+  overflow: hidden;*/
 }
 
 .clearfix::after {
@@ -140,7 +148,7 @@ img {
   max-width: 100%;
 }
 
-.block{
+.block {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
@@ -164,49 +172,43 @@ img {
   padding: 2%;
 }
 
-footer{
+footer {
   padding-top: 3em;
-
-
   height: 200%;
 }
 
-section{
-
+section {
   padding-top: 6%;
   padding-bottom: 6%;
-
-
   /*margin-bottom: 2em;*/
 }
 
-@media screen and (max-width: 580px){
+@media screen and (max-width: 580px) {
   .left {
     float: none;
     display: block;
     width: 100%;
     padding: 2%;
   }
-
   .right {
     float: none;
-        display: block;
-        width: 100%;
+    display: block;
+    width: 100%;
     padding: 2%;
   }
 }
 
-.blue{
-  // background-color: #53b2e5;
- // background-color: rgba(83, 178, 229, 0.1);
+.blue {
+  background-color: #53b2e5;
+  background-color: rgba(83, 178, 229, 0.1);
 }
 
 .dark {
-  // background-color: #31343c;
-  // background-color: rgba(49, 52, 60, 0.1)
+  background-color: #31343c;
+  background-color: rgba(49, 52, 60, 0.1)
 }
 
 .orange {
- // background-color: #e26a6a;
- // background-color: rgba(226, 106, 106, 0.1);
+  background-color: #e26a6a;
+  background-color: rgba(226, 106, 106, 0.1);
 }
