--- a/example/style.css
+++ b/example/style.css
@@ -55,10 +55,15 @@ summary {
 
   position: fixed !important;
   top: 0;
-  opacity: 0.4;
-  // z-index: -10;
+  left: 0;
+  /*opacity: 0.4;*/
+  z-index: -100;
   width: 100%;
   height: 100%;
+
+  -webkit-backface-visibility: hidden;
+     -moz-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
 .background-1 {
